# CSIT5210-data-mining-course-project

./: .env.example  .gitignore  GMM 聚类实验报告.md  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  三算法聚类对比报告.md  阅读指引.md
docs/: FINAL-SUMMARY.md  PRD.md  PROJECT-SUMMARY.md  QUICK-REFERENCE.md  architecture.md  clustering-experimental-report.md  development-guide.md  epics.md  implementation-readiness-report-2025-11-09.md  index.md  product-brief-report-2025-11-08.md  project-overview.md  research-technical-2025-11-08.md  source-tree-analysis.md  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md  tech-spec-epic-3.md  tech-spec-epic-5.md
docs/retrospectives/: epic-1-retro-2025-11-09.md  epic-2-retro-2025-11-09.md
docs/stories/: 1-1-project-initialization-and-environment-setup.context.xml  1-1-project-initialization-and-environment-setup.md  1-2-configuration-management-system.context.xml  1-2-configuration-management-system.md  1-3-ag-news-dataset-loading-and-validation.context.xml  1-3-ag-news-dataset-loading-and-validation.md  (+24 more)
reports/: clustering_comparison.md
scripts/: 01_generate_embeddings.py  02_train_clustering.py  03_evaluate_clustering.py  04_visualize_clusters.py  05_analyze_clusters.py  06_initialize_agents.py  07_dbscan_clustering.py  07_gmm_clustering.py  07b_dbscan_post_analysis.py  07c_gmm_post_analysis.py  08_generate_comparison_charts.py  08_hierarchical_clustering.py  09_compare_algorithms.py  09_generate_confusion_matrix.py  test_normalization_impact.py
提交材料_CSIT5210_聚类实验/: 阅读指引.md  📋 提交说明.md
(+42 files in other folders)
