[project]
name = "context-aware-multi-agent-system"
version = "0.1.0"
description = "Multi-Agent collaborative system for cost-efficient text classification using K-Means clustering and cosine similarity routing"
authors = [{name = "Jack YUAN"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
